cmake_minimum_required( VERSION 2.8 )
PROJECT(MSCNAV)

SET(CMAKE_CXX_COMPILE "g++")
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -march=native -O3 -pthread" )
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/util)

ADD_EXECUTABLE(${PROJECT_NAME} ./example/NavTime.cc)
target_link_libraries( ${PROJECT_NAME} Util)